--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio-site",
-  "version": "0.9.0",
+  "version": "0.10.0",
   "private": true,
   "scripts": {
     "build": "gatsby build",
@@ -14,22 +14,24 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "gatsby": "^2.31.1",
+    "babel-preset-gatsby": "^1.0.0",
+    "gatsby": "^3.0.4",
     "gatsby-image": "^2.10.0",
-    "gatsby-plugin-google-analytics": "^2.10.0",
-    "gatsby-plugin-layout": "^1.9.0",
-    "gatsby-plugin-manifest": "^2.11.0",
-    "gatsby-plugin-postcss": "^3.6.0",
-    "gatsby-plugin-preact": "^4.6.0",
-    "gatsby-plugin-purgecss": "^5.0.0",
-    "gatsby-plugin-react-helmet": "^3.9.0",
-    "gatsby-plugin-sharp": "^2.13.4",
+    "gatsby-plugin-google-analytics": "^3.0.0",
+    "gatsby-plugin-image": "^1.0.1",
+    "gatsby-plugin-layout": "^2.0.0",
+    "gatsby-plugin-manifest": "^3.0.0",
+    "gatsby-plugin-postcss": "^4.0.0",
+    "gatsby-plugin-preact": "^5.0.0",
+    "gatsby-plugin-purgecss": "^6.0.0",
+    "gatsby-plugin-react-helmet": "^4.0.0",
+    "gatsby-plugin-sharp": "^3.0.1",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
-    "gatsby-source-filesystem": "^2.10.0",
-    "gatsby-transformer-json": "^2.10.0",
-    "gatsby-transformer-sharp": "^2.11.0",
+    "gatsby-source-filesystem": "^3.0.0",
+    "gatsby-transformer-json": "^3.0.0",
+    "gatsby-transformer-sharp": "^3.0.0",
     "intersection-observer": "^0.12.0",
-    "postcss": "^8.2.4",
+    "postcss": "^8.2.8",
     "postcss-browser-reporter": "^0.6.0",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^14.0.0",
