--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "tachyons": "^4.12.0"
   },
   "devDependencies": {
+    "preact-render-to-string": "^5.1.16",
     "prettier": "^2.2.1"
   },
   "repository": {
