--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio-site",
-  "version": "0.10.1",
+  "version": "0.11.0",
   "private": true,
   "scripts": {
     "build": "gatsby build",
@@ -10,32 +10,31 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-brands-svg-icons": "^5.15.3",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/react-fontawesome": "^0.1.14",
-    "babel-preset-gatsby": "^1.8.0",
-    "gatsby": "^3.8.1",
-    "gatsby-plugin-google-gtag": "^3.8.0",
-    "gatsby-plugin-image": "^1.8.0",
-    "gatsby-plugin-layout": "^2.8.0",
-    "gatsby-plugin-manifest": "^3.8.0",
-    "gatsby-plugin-postcss": "^4.8.0",
-    "gatsby-plugin-preact": "^5.8.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
+    "babel-preset-gatsby": "^2.0.0",
+    "gatsby": "^4.0.0",
+    "gatsby-plugin-google-gtag": "^4.0.0",
+    "gatsby-plugin-image": "^2.0.0",
+    "gatsby-plugin-layout": "^3.0.0",
+    "gatsby-plugin-manifest": "^4.0.0",
+    "gatsby-plugin-postcss": "^5.0.0",
+    "gatsby-plugin-preact": "^6.0.0",
     "gatsby-plugin-purgecss": "^6.0.2",
-    "gatsby-plugin-react-helmet": "^4.8.0",
-    "gatsby-plugin-sharp": "^3.8.0",
+    "gatsby-plugin-react-helmet": "^5.0.0",
+    "gatsby-plugin-sharp": "^4.0.0",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
-    "gatsby-source-filesystem": "^3.8.0",
-    "gatsby-transformer-json": "^3.8.0",
-    "gatsby-transformer-sharp": "^3.8.0",
-    "intersection-observer": "^0.12.0",
-    "postcss": "^8.3.5",
+    "gatsby-source-filesystem": "^4.0.0",
+    "gatsby-transformer-json": "^4.0.0",
+    "gatsby-transformer-sharp": "^4.0.0",
+    "postcss": "^8.3.11",
     "postcss-browser-reporter": "^0.6.0",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^14.0.2",
-    "postcss-reporter": "^7.0.2",
-    "preact": "^10.5.14",
+    "postcss-reporter": "^7.0.4",
+    "preact": "^10.5.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
@@ -44,8 +43,10 @@
     "tachyons": "^4.12.0"
   },
   "devDependencies": {
+    "@netlify/plugin-gatsby": "^2.0.0-beta",
+    "gatsby-plugin-netlify": "^4.0.0-next.0",
     "preact-render-to-string": "^5.1.19",
-    "prettier": "^2.3.2"
+    "prettier": "^2.4.1"
   },
   "repository": {
     "type": "git",
