--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio-site",
-  "version": "0.11.0",
+  "version": "0.12.0",
   "private": true,
   "scripts": {
     "build": "gatsby build",
@@ -10,43 +10,44 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.16",
-    "babel-preset-gatsby": "^2.0.0",
-    "gatsby": "^4.0.0",
-    "gatsby-plugin-google-gtag": "^4.0.0",
-    "gatsby-plugin-image": "^2.0.0",
-    "gatsby-plugin-layout": "^3.0.0",
-    "gatsby-plugin-manifest": "^4.0.0",
-    "gatsby-plugin-postcss": "^5.0.0",
-    "gatsby-plugin-preact": "^6.0.0",
-    "gatsby-plugin-purgecss": "^6.0.2",
-    "gatsby-plugin-react-helmet": "^5.0.0",
-    "gatsby-plugin-sharp": "^4.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "babel-preset-gatsby": "^2.24.0",
+    "gatsby": "^4.24.7",
+    "gatsby-plugin-google-gtag": "^4.24.0",
+    "gatsby-plugin-image": "^2.24.0",
+    "gatsby-plugin-layout": "^3.24.0",
+    "gatsby-plugin-manifest": "^4.24.0",
+    "gatsby-plugin-postcss": "^5.24.0",
+    "gatsby-plugin-preact": "^6.24.0",
+    "gatsby-plugin-purgecss": "^6.1.2",
+    "gatsby-plugin-react-helmet": "^5.24.0",
+    "gatsby-plugin-sass": "^5.24.0",
+    "gatsby-plugin-sharp": "^4.24.0",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
-    "gatsby-source-filesystem": "^4.0.0",
-    "gatsby-transformer-json": "^4.0.0",
-    "gatsby-transformer-sharp": "^4.0.0",
-    "postcss": "^8.3.11",
+    "gatsby-source-filesystem": "^4.24.0",
+    "gatsby-transformer-json": "^4.24.0",
+    "gatsby-transformer-sharp": "^4.24.0",
+    "postcss": "^8.4.18",
     "postcss-browser-reporter": "^0.6.0",
     "postcss-cssnext": "^3.1.0",
-    "postcss-import": "^14.0.2",
-    "postcss-reporter": "^7.0.4",
-    "preact": "^10.5.15",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "postcss-import": "^15.0.0",
+    "postcss-reporter": "^7.0.5",
+    "preact": "^10.11.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-transition-group": "^4.4.2",
+    "react-transition-group": "^4.4.5",
     "smartquotes": "^2.3.2",
     "tachyons": "^4.12.0"
   },
   "devDependencies": {
-    "@netlify/plugin-gatsby": "^2.0.0-beta",
-    "gatsby-plugin-netlify": "^4.0.0-next.0",
-    "preact-render-to-string": "^5.1.19",
-    "prettier": "^2.4.1"
+    "@netlify/plugin-gatsby": "^3.4.8",
+    "gatsby-plugin-netlify": "^5.0.1",
+    "preact-render-to-string": "^5.2.6",
+    "prettier": "^2.7.1"
   },
   "repository": {
     "type": "git",
